finish 7.1